# LeagueEye

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  UPDATE_GUIDE.md  gold-overlay.html  index.html  objective-overlay.html  opencode.json  overlay.html  package-lock.json  package.json  take_screenshots.js  vite.config.ts
.claude/: settings.local.json
plans/: LEA-16-item-catalog-for-ai-coach.md
server/: .env.example  Cargo.toml
server/migrations/: 001_initial.sql  002_add_reviews_and_timelines.sql  003_review_status.sql
server/src/: champion_catalog.rs  db.rs  item_catalog.rs  main.rs  riot_api.rs
server/src/routes/: coach.rs  global.rs  live.rs  matches.rs  mod.rs  players.rs  review.rs  updates.rs
shared/: Cargo.toml
shared/src/: models.rs
src/: App.tsx  gold-overlay.tsx  index.css  objective-overlay.tsx  overlay.css  overlay.tsx
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_coach.rs  api_client.rs  commands.rs  db.rs  gold_counter.rs  lcu.rs  league_window.rs  lib.rs  models.rs  overlay_policy.rs  riot_api.rs
src/components/: AccountBadge.tsx  AiTestDialog.tsx  ChampionStats.tsx  CoachPanel.tsx  CoachText.tsx  CompareView.tsx  DraftHelperPanel.tsx  FavoritesPanel.tsx  GoldLaneRow.tsx  GoldOverlayApp.tsx  HomeView.tsx  LiveGameView.tsx  LivePlayerRow.tsx  MasteryList.tsx  MatchCard.tsx  MatchDetailView.tsx  MatchHistory.tsx  ObjectiveOverlayApp.tsx  OverlayApp.tsx  PlayerTrends.tsx  PostGameReviewView.tsx  ProfileCard.tsx  (+4 more)
(+23 files in other folders)
