[package]
name = "leagueeye-server"
version = "0.1.0"
edition = "2021"

[dependencies]
leagueeye-shared = { path = "../shared" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
semver = "1"
